--- a/front-end/package.json
+++ b/front-end/package.json
@@ -31,16 +31,16 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.6.1",
-    "@tsconfig/node18": "^2.0.1",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.16.17",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@tsconfig/node18": "^18.2.2",
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.5",
+    "@vitejs/plugin-vue": "^4.5.2",
     "@vitest/coverage-v8": "^0.33.0",
     "@vitest/ui": "^0.33.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.4.0",
+    "@vue/tsconfig": "^0.5.1",
     "axios-mock-adapter": "^1.21.5",
     "eslint": "^8.56.0",
     "eslint-plugin-sonarjs": "^0.23.0",
@@ -51,11 +51,11 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "sass": "^1.63.6",
-    "typescript": "~5.0.4",
+    "typescript": "^5.3.3",
     "vite": "^4.3.9",
     "vitest": "^0.33.0",
     "vitest-canvas-mock": "^0.3.2",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.8.25"
   },
   "engines": {
     "node": ">=18.16.0",
